# ocr-metrics

./: LICENSE  README.md  pyproject.toml  quick_test.py
ocr_metrics/: __init__.py  metrics.py
tests/: test_metrics.py
