[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-metrics"
version = "0.1.0"
description = "CER and WER metrics for Jawi OCR evaluation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["jawi_metrics"]